--- a/PrimalGameWebApp/templates/partials/_header.html
+++ b/PrimalGameWebApp/templates/partials/_header.html
@@ -4,6 +4,6 @@
 </header>
 <nav>
   <ul>
-    <li><a href="{% url 'home' %}">Home</a></li>
+    <li><a href="{% url 'webapp:home' %}">Home</a></li>
   </ul>
 </nav>
