--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% csrf_token %}
 <input type="hidden" name="next" value="{{ next }}">{{ form|crispy }}<button type="submit" class="btn btn-primary btn-block">Log in</button>
 </form>
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'authen:password_reset' %}">Lost password?</a></p>
 </div>
 </div>
 {% endblock %}
