--- a/PrimalGameWebApp/templates/base.html
+++ b/PrimalGameWebApp/templates/base.html
@@ -27,7 +27,7 @@
       href="{% static 'css/style.css' %}"
       onload="this.rel = 'stylesheet'"
     />
-
+    <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
