--- a/PrimalGameWebApp/templates/start-game.html
+++ b/PrimalGameWebApp/templates/start-game.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% load static %} {% block content %}
 <section>
     <article>
     <!-- Add your code in the line below  -->
@@ -9,17 +9,11 @@
         <!--Begin col-->
         <div class="column">
 
-            <select name="RPI_list">
-                {% for item in rpi_list %}
-                    <option value="{{ item.id }}">{{ item.board_name }}</option>
-                {% endfor %}
-            </select>
-
-            <select name="PRIMAL_list">
-                {% for item in primal_list %}
-                    <option value="{{ item.id }}">{{ item.name }}</option>
-                {% endfor %}
-            </select>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button  type="submit"  class="btn btn-success">Submit </button>
+            </form>
 
         </div>
         <!--End col-->
