push button function and view is implemented

--- a/PrimalGameWebApp/templates/game_push_button.html
+++ b/PrimalGameWebApp/templates/game_push_button.html
@@ -1,36 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Page</title>
+
+    <!-- Load favicon -->
+    <link
+    rel="shortcut icon"
+    type="image/png"
+    href="{% static 'img/favicon.ico' %}"
+    />
+    <!-- Include your CSS files here -->
+    <link
+      rel="preload"
+      as="style"
+      href="{% static 'css/game_push_button.css' %}"
+      onload="this.rel = 'stylesheet'"
+    />
+
 </head>
 <body>
-    <button id="signalButton">Hold Me Down!</button>
+    <div id="signalButton" class="circle"></div>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const button = document.getElementById('signalButton');
             
-            let pressTimer;
-            
             button.addEventListener('mousedown', function () {
-                pressTimer = setTimeout(() => {
-                    sendSignal(); // Call the function to send signal
-                }, 10); // Change the delay as needed
+                    sendSignal('press'); // Call the function to send signal
+                    button.classList.add('pressed'); // Add the 'pressed' class
             });
             
             button.addEventListener('mouseup', function () {
-                clearTimeout(pressTimer);
+                sendSignal('release'); // Call the function to send signal for release event
+                button.classList.remove('pressed'); // Remove the 'pressed' class
             });
             
             button.addEventListener('mouseleave', function () {
-                clearTimeout(pressTimer);
+                sendSignal('release'); // Call the function to send signal for release event
+                button.classList.remove('pressed'); // Remove the 'pressed' class
             });
             
-            function sendSignal() {
+            function sendSignal(eventType) {
                 // Use AJAX to send signal to Django backend
                 const xhr = new XMLHttpRequest();
-                xhr.open('GET', '{% url "webapp:handle-signal" %}', true); // Use Django template tag here
+                xhr.open('GET', '{% url "webapp:handle-signal" %}?event=' + eventType, true); 
                 xhr.onload = function () {
                     if (xhr.status === 200) {
                         console.log('Signal sent successfully');
