core system work

--- a/PrimalGameWebApp/templates/game_push_button.html
+++ b/PrimalGameWebApp/templates/game_push_button.html
@@ -26,26 +26,36 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const button = document.getElementById('signalButton');
+            const gameInstanceId = getGameInstanceIdFromURL();
             
             button.addEventListener('mousedown', function () {
-                    sendSignal('press'); // Call the function to send signal
+                    sendSignal('press', gameInstanceId); // Call the function to send signal
                     button.classList.add('pressed'); // Add the 'pressed' class
             });
             
             button.addEventListener('mouseup', function () {
-                sendSignal('release'); // Call the function to send signal for release event
+                sendSignal('release', gameInstanceId); // Call the function to send signal for release event
                 button.classList.remove('pressed'); // Remove the 'pressed' class
             });
             
             button.addEventListener('mouseleave', function () {
-                sendSignal('release'); // Call the function to send signal for release event
+                sendSignal('release', gameInstanceId); // Call the function to send signal for release event
                 button.classList.remove('pressed'); // Remove the 'pressed' class
             });
             
-            function sendSignal(eventType) {
+            function getGameInstanceIdFromURL() {
+                // Extract gameInstanceId from current URL
+                const pathParts = window.location.pathname.split('/');
+                return parseInt(pathParts[pathParts.length - 1]); // Assuming the gameInstanceId is the last part of the URL path
+            }
+
+
+
+            function sendSignal(eventType, gameInstanceId) {
                 // Use AJAX to send signal to Django backend
                 const xhr = new XMLHttpRequest();
-                xhr.open('GET', '{% url "webapp:handle-signal" %}?event=' + eventType, true); 
+                const url = '{% url "webapp:handle-signal" gameinstance=0 %}'.replace('0', gameInstanceId) + '?event=' + eventType
+                xhr.open('GET',url , true); 
                 xhr.onload = function () {
                     if (xhr.status === 200) {
                         console.log('Signal sent successfully');
