--- a/PrimalGameWebApp/templates/partials/_footer.html
+++ b/PrimalGameWebApp/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <footer>
   <article>
-    <img src="{% static 'img/cute-monkey-holding-banana.jpg' %}" />
+    <img class="img_footer" src="{% static 'img/cute-monkey-holding-banana.jpg' %}" />
   </article>
   <article>
     <p>Copyright Chula MRC</p>
