--- a/PrimalGameWebApp/templates/start-game.html
+++ b/PrimalGameWebApp/templates/start-game.html
@@ -1,23 +1,17 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% load static %} {% block content %}
 <section>
     <article>
-    <!-- Add your code in the line below  -->
-    <h1>Initiate the Experiment</h1>
+    
 
     <!--Begin row-->
-    <div class="row">
-        <!--Begin col-->
-        <div class="column">
-
+    <div class="center_startgame">
+        <!-- Add your code in the line below  -->
+        <h1>Initiate the Experiment</h1>
             <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button  type="submit"  class="btn btn-success">Submit </button>
             </form>
-
-        </div>
-        <!--End col-->
-
     </div>
     <!--End row-->
     </article>
